--- a/main/index.html
+++ b/main/index.html
@@ -28,6 +28,9 @@ body, html	{
 
 <script>
 
+//The following 500 lines of script could
+//be moved to an external file
+
 var width = 650;
 var height = 650; 
 var world = document.getElementById('world');
